--updated to pug

--- a/views/includes/rl_received.pug
+++ b/views/includes/rl_received.pug
@@ -18,6 +18,6 @@
             =count
           td
             a(href='/address/#{item.a_id}') #{item.a_id}
-            include ./rl_labels.jade
+            include ./rl_labels.pug
           td.hidden-xs
             =itemFixed.toFixed(8)
