--- a/views/includes/rl_balance.pug
+++ b/views/includes/rl_balance.pug
@@ -20,7 +20,7 @@
             =count
           td 
             a(href='/address/#{item.a_id}') #{item.a_id}
-            include ./rl_labels.jade
+            include ./rl_labels.pug
           td.hidden-xs
             =itemFixed.toFixed(8)
           td.hidden-xs(style='text-align:center;') 
