--- a/views/info.pug
+++ b/views/info.pug
@@ -6,7 +6,7 @@ block content
       .panel-heading
         strong #{settings.locale.api_title}
       .panel-body
-        :markdown
+        :markdown-it(linkify langPrefix='highlight-')
           *#{settings.locale.api_message}*
           
           ------
@@ -41,7 +41,7 @@ block content
         
 
         if settings.index.show_hashrate == true
-          :markdown
+          :markdown-it(linkify langPrefix='highlight-')
             *  **getnetworkhashps**  
                *#{settings.locale.api_getnetworkhashps}*  
                [#{address}/api/getnetworkhashps](/api/getnetworkhashps)
@@ -49,7 +49,7 @@ block content
 
 
         if settings.heavy == true
-          :markdown
+          :markdown-it(linkify langPrefix='highlight-')
             *  **getmaxmoney**  
                *#{settings.locale.api_getmaxmoney}*  
                [#{address}/api/getmaxmoney](/api/getmaxmoney)
@@ -82,7 +82,7 @@ block content
                *#{settings.locale.api_getnextrewardwhenstr}*  
                [#{address}/api/getnextrewardwhenstr](/api/getnextrewardwhenstr)                                                       
 
-        :markdown
+        :markdown-it(linkify langPrefix='highlight-')
           ------
 
           ### Extended API 
