--updated to pivx as it was incorrectly from non pivx

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,10 @@ body {
 	overflow: hidden;
 }
 
+.mono {
+	font-family: 'Overpass Mono', monospace;
+}
+
 .panel-address-summary {
  margin-bottom: 5px;
 }
@@ -164,3 +168,59 @@ tr {
 	bottom: 0px;
 }
 
+.panel-summary p {
+	font-size: 13px;
+	margin: 0 0 3px;
+}
+
+.panel-summary h1 {
+	font-size: 16px;
+	margin-top: 0;
+	margin-bottom: 0px;
+	line-height: 0.8;
+
+}
+
+.panel-summary h3 {
+	font-size: 12px;
+	color: gray;
+	margin-top: 3px;
+	margin-bottom: 0;
+}
+
+.panel-summary h5 {
+	font-size: 12px;
+	margin-top: 3px;
+	margin-bottom: 0;
+}
+
+.panel-summary .panel-body {
+	min-height: 90px;
+}
+
+.coin-info {
+
+}
+
+.coin-info h2 {
+	margin: 3px;
+	padding: 0;
+}
+
+.coin-info h5.sub {
+	margin: 0;
+	padding: 0;
+	color: #ababab;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
+.coin-info .info-row {
+	min-height: 100px;
+	padding-top: 10px;
+	margin: 10px;
+}
+
+.coin-info .row.earnings {
+	margin-bottom: 5px;
+}
