--- a/views/includes/rl_balance.pug
+++ b/views/includes/rl_balance.pug
@@ -21,7 +21,7 @@
           td 
             a(href=`/address/${item.a_id}`) #{item.a_id}
             include ./rl_labels.pug
-          td.hidden-xs
+          td.hidden-xs.text-right
             =itemFixed.toFixed(8)
           td.hidden-xs(style='text-align:center;') 
             =percentage.toFixed(2)
