--- a/views/includes/rl_received.pug
+++ b/views/includes/rl_received.pug
@@ -19,5 +19,5 @@
           td
             a(href=`/address/${item.a_id}`) #{item.a_id}
             include ./rl_labels.pug
-          td.hidden-xs
+          td.hidden-xs.text-right
             =itemFixed.toFixed(8)
