--- a/views/tx.pug
+++ b/views/tx.pug
@@ -7,14 +7,18 @@ block content
       | #{tx.txid}
     .panel.panel-default
       .panel-heading.hidden-xs
-        strong #{settings.symbol} txid: #{tx.txid}
+        strong #{settings.symbol} txid:
+          span.mono  #{tx.txid}
         a(href=`/api/getrawtransaction?txid=${tx.txid}&decrypt=1`)
           span.glyphicon.glyphicon-info-sign.iquidus.pull-right
       table.table.table-bordered.table-striped.summary-table 
         thead
           tr
             th #{settings.locale.confirmations}
-            th.hidden-xs #{settings.locale.tx_block_hash}
+            if settings.baseType === 'ripple'
+              th.hidden-xs #{settings.locale.tx_ledger_hash}
+            else
+              th.hidden-xs #{settings.locale.tx_block_hash}
             th #{settings.locale.timestamp}
             th
         tbody
@@ -23,7 +27,7 @@ block content
             tr.success
                 td #{confirms}
                 td.hidden-xs 
-                  a(href=`/block/${tx.blockhash}`) #{tx.blockhash}
+                  a.mono(href=`/block/${tx.blockhash}`) #{tx.blockhash}
                 td #{time}
                 td.view_tx  
                   a(href=`/block/${tx.blockhash}`)
@@ -33,7 +37,7 @@ block content
               tr.danger
                 td #{confirms}
                 td.hidden-xs  
-                  a(href=`/block/${tx.blockhash}`) #{tx.blockhash}
+                  a.mono(href='/block/#{tx.blockhash}') #{tx.blockhash}
                 td #{time}
                 td.view_tx  
                   a(href=`/block/${tx.blockhash}`)
@@ -42,7 +46,7 @@ block content
               tr.warning
                 td #{confirms}
                 td.hidden-xs  
-                  a(href=`/block/${tx.blockhash}`) #{tx.blockhash}
+                  a.mono(href=`/block/${tx.blockhash}`) #{tx.blockhash}
                 td #{time}
                 td.view_tx  
                   a(href=`/block/${tx.blockhash}`)
@@ -74,7 +78,7 @@ block content
                       - var ramount = r.amount / 100000000
                       tr
                         td 
-                          a.loading(href='/address/#{r.addresses}') 
+                          a.mono.loading(href=`/address/${r.addresses}`)
                             =r.addresses
                         td.danger.hidden-xs #{ramount.toFixed(8)}
                       tr.hidden-lg.hidden-md
@@ -97,7 +101,7 @@ block content
                     - var ramount = r.amount / 100000000  
                     tr
                       td 
-                        a.loading(href='/address/#{r.addresses}') 
+                        a.mono.loading(href=`/address/${r.addresses}`)
                           =r.addresses 
                       td.success.hidden-xs  #{ramount.toFixed(8)}
                     tr.hidden-lg.hidden-md
