--- a/views/includes/rl_labels.pug
+++ b/views/includes/rl_labels.pug
@@ -1,6 +1,6 @@
 if settings.labels[item.a_id]
   if settings.labels[item.a_id].type  
-    label(class=`label label-${settings.labels[item.a_id].type} hidden-xs', style='margin-left:15px;`)
+    label(class=`label label-${settings.labels[item.a_id].type} hidden-xs`, style='margin-left:15px;')
       =settings.labels[item.a_id].label
       if settings.labels[item.a_id].url
         a(href=`${settings.labels[item.a_id].url}`, target='_blank')
