--replaced bitcoin-node-api to use bitcoin-rpc-api

--- a/views/block.pug
+++ b/views/block.pug
@@ -11,7 +11,7 @@ block content
           if block.previousblockhash != null
             a(href=`/block/${block.previousblockhash}`)
               span.glyphicon.glyphicon-chevron-left.iquidus.block-last(data-toggle='tooltip', data-placement='top', title=`${settings.locale.block_previous}`)  
-            strong.hidden-xs ${settings.symbol} block: #{block.hash}
+            strong.hidden-xs #{settings.symbol} block: #{block.hash}
           else
             strong.hidden-xs(style='margin-left:10px;') #{settings.symbol} #{settings.locale.ex_block}: #{block.hash}
           if block.nextblockhash != null 
